--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -120,9 +120,37 @@ jobs:
           format: 'table'
           exit-code: '1'
           severity: 'CRITICAL'
+# ═══════════════════════════════════════
+  # 6. DAST
+  # ═══════════════════════════════════════
+
+
+ # Après container-scan
+  dast:
+    name: ⚡ DAST
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/checkout@v4
+      
+      - uses: actions/download-artifact@v4
+        with:
+          name: docker-image
+      
+      - name: Load and run app
+        run: |
+          docker load < image.tar
+          docker run -d -p 3000:3000 --name app vuln-app:${{ github.sha }}
+          sleep 5
+      
+      - name: OWASP ZAP Baseline
+        uses: zaproxy/action-baseline@v0.10.0
+        with:
+          target: 'http://localhost:3000'
+          allow_issue_writing: false
 
   # ═══════════════════════════════════════
-  # 6. RAPPORT FINAL
+  # 7. RAPPORT FINAL
   # Génère un résumé de tous les scans de sécurité
   # Vérifie le statut de chaque job et fait ÉCHOUER le pipeline si des vulnérabilités sont détectées
   # S'exécute toujours (if: always()) même si des jobs précédents ont échoué
