--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -128,7 +128,7 @@ jobs:
           name: docker-image
 
       - name: Create reports directory
-        run: mkdir -p zap-reports
+        run: mkdir -p ./zap-reports
 
       - name: Load and run app
         run: |
@@ -136,15 +136,28 @@ jobs:
           docker run -d -p 3000:3000 --name app vuln-app:${{ github.sha }}
           sleep 10  # Attendre que l'app soit prête
 
-      - name: OWASP ZAP Baseline
+      - name: Run OWASP ZAP Baseline
         uses: zaproxy/action-baseline@v0.10.0
         with:
           target: 'http://localhost:3000'
+          artifact_name: 'zap-report'  # Nom simple et valide
+          cmd_options: '-a -j -t http://localhost:3000'
           allow_issue_writing: false
-          artifact_name: "zap-scan-results"
-          rules_file_name: ".zap/rules.tsv"
-          cmd_options: "-a -j -t http://localhost:3000"
-          docker_options: "-v ${{ github.workspace }}/zap-reports:/zap/wrk:rw"
+
+      - name: Move reports to artifact
+        if: always()
+        run: |
+          mv report_*.json ./zap-reports/
+          mv report_*.md ./zap-reports/
+          mv report_*.html ./zap-reports/
+
+      - name: Upload ZAP reports
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: zap-reports
+          path: ./zap-reports/
+
 
   # ═══════════════════════════════════════
   # 7. RAPPORT FINAL
